--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,28 +19,32 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.SettingsActivity"
-            android:exported="false">
+            android:exported="false"
+            android:label="Settings">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".ui.RegisterActivity"
-            android:exported="false">
+            android:exported="false"
+            android:label="Register">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".ui.LocationActivity"
-            android:exported="false">
+            android:exported="false"
+            android:label="Location">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".ui.HomeActivity"
-            android:exported="false">
+            android:exported="false"
+            android:label="Home">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -62,7 +66,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
